# project_mercury

./: .gitignore  Cargo.toml  Procfile  README.md  deploy-commands.js  index.js  package-lock.json  package.json
commands/: ping.js
commands/chat/: chat.js
commands/chess/: chess.js
commands/music-player/: music.js  play.js  queue.js  skip.js  stop.js
src/: gptconnection.rs  main.js  main.rs
src/commands/features/: play.js
src/commands/tools/: ping.js
src/events/client/: interactionCreate.js  ready.js
src/functions/handlers/: handleCommands.js  handleEvents.js
