[package]
name = "project_mercury"
version = "0.1.0"
authers = ["Your Name <Kennedy Mosoti>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
hyper = { version = "0.14.4", features = ["full"] }
hyper-tls = "0.5.0"
tokio = { version = "1.0.1", features = ["full"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.59"
serde_derive = "1.0.118"